@@ -1,5 +1,9 @@
 2009-01-19  Ray Strode  <rstrode@redhat.com>
 
+	* gnome-bg.c (gnome_bg_set_pixmap_as_root_with_crossfade), (gnome_bg_get_pixmap_from_root): Add functions to let g-s-d crossfade bg.
+
+2009-01-19  Ray Strode  <rstrode@redhat.com>
+
 	* gnome-bg.c (gnome_bg_set_pixmap_as_root): Add docstring for gnome_bg_set_pixmap_as_root
 
 2009-01-19  Ray Strode  <rstrode@redhat.com>
